argocd-ingress/overlays/tokyo0/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argocd-server
  namespace: argocd
spec:
  virtualhost:
    fqdn: argocd.tokyo0.cybozu-ne.co
