argocd-ingress/overlays/tokyo0/ingressroute.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  virtualhost:
    fqdn: argocd.tokyo0.cybozu-ne.co
